{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 19,
  "lineage": "fbdc92ec-79c2-e49c-77ac-39a46c759da2",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277707099798:vpc/vpc-066f6ab79f2f1f015",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a2c18e858ac033ef",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0a53b614ba0d7cf3c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-066f6ab79f2f1f015",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d216645fe5373a99",
            "owner_id": "277707099798"
          }
        }
      ]
    },
    {
      "module": "module.prometheus",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea3c35c5c3284d82",
            "arn": "arn:aws:ec2:us-east-2:277707099798:instance/i-042a2b85b5586a082",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-042a2b85b5586a082",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "connection",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04f26e50dd88d3e79",
            "private_dns": "ip-172-31-15-208.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.15.208",
            "public_dns": "ec2-18-119-192-131.us-east-2.compute.amazonaws.com",
            "public_ip": "18.119.192.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0978861fe8647a2e2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prometheus-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c990c6679e93c575",
            "tags": {
              "Name": "prometheus"
            },
            "tags_all": {
              "Name": "prometheus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08be97a2c74eeb289"
            ]
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.prometheus-sg.aws_security_group.my-ssh-SG"
          ]
        }
      ]
    },
    {
      "module": "module.prometheus-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-ssh-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277707099798:security-group/sg-08be97a2c74eeb289",
            "description": "enable ssh and ports 9090,3000",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08be97a2c74eeb289",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 3000 Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 9090 Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "prometheus-sg",
            "name_prefix": "",
            "owner_id": "277707099798",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prometheus-sg"
            },
            "tags_all": {
              "Name": "prometheus-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-066f6ab79f2f1f015"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.prometheus-sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow-all1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277707099798:security-group-rule/sgr-03397c02ff9ee826d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03397c02ff9ee826d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08be97a2c74eeb289",
            "security_group_rule_id": "sgr-03397c02ff9ee826d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.prometheus-sg.aws_security_group.my-ssh-SG"
          ]
        }
      ]
    },
    {
      "module": "module.prometheus-sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277707099798:security-group-rule/sgr-01e1bb405e9782788",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow SSH",
            "from_port": 22,
            "id": "sgr-01e1bb405e9782788",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08be97a2c74eeb289",
            "security_group_rule_id": "sgr-01e1bb405e9782788",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.prometheus-sg.aws_security_group.my-ssh-SG"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277707099798:security-group-rule/sgr-08e4c63fd987b4724",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow port 9090 Prometheus",
            "from_port": 9090,
            "id": "sgr-08e4c63fd987b4724",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08be97a2c74eeb289",
            "security_group_rule_id": "sgr-08e4c63fd987b4724",
            "tags": null,
            "tags_all": {},
            "to_port": 9090
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.prometheus-sg.aws_security_group.my-ssh-SG"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277707099798:security-group-rule/sgr-0f69833a883a4e51a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow port 3000 Grafana",
            "from_port": 3000,
            "id": "sgr-0f69833a883a4e51a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08be97a2c74eeb289",
            "security_group_rule_id": "sgr-0f69833a883a4e51a",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.prometheus-sg.aws_security_group.my-ssh-SG"
          ]
        }
      ]
    },
    {
      "module": "module.todo-app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea3c35c5c3284d82",
            "arn": "arn:aws:ec2:us-east-2:277707099798:instance/i-0f39b8c17c8f964ec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f39b8c17c8f964ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "connection",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-080a4e06069043610",
            "private_dns": "ip-172-31-15-60.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.15.60",
            "public_dns": "ec2-18-222-90-253.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.90.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fae0c1732961b2fa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "todo-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c990c6679e93c575",
            "tags": {
              "Name": "todo-app"
            },
            "tags_all": {
              "Name": "todo-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dc63b9a30d8fe86e"
            ]
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.todo-app-sg.aws_security_group.my-ssh-SG"
          ]
        }
      ]
    },
    {
      "module": "module.todo-app-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-ssh-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277707099798:security-group/sg-0dc63b9a30d8fe86e",
            "description": "enable ssh and ports 3000,9100,8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc63b9a30d8fe86e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 3000 todo-app",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 8080 cAdvisor",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 9100 nodeExporter",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "todo-app-sg",
            "name_prefix": "",
            "owner_id": "277707099798",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "todo-app-sg"
            },
            "tags_all": {
              "Name": "todo-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-066f6ab79f2f1f015"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.todo-app-sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow-all1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277707099798:security-group-rule/sgr-005e785f171caf430",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-005e785f171caf430",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dc63b9a30d8fe86e",
            "security_group_rule_id": "sgr-005e785f171caf430",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.todo-app-sg.aws_security_group.my-ssh-SG"
          ]
        }
      ]
    },
    {
      "module": "module.todo-app-sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277707099798:security-group-rule/sgr-089987d76158bbcfd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow SSH",
            "from_port": 22,
            "id": "sgr-089987d76158bbcfd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dc63b9a30d8fe86e",
            "security_group_rule_id": "sgr-089987d76158bbcfd",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.todo-app-sg.aws_security_group.my-ssh-SG"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277707099798:security-group-rule/sgr-0b2a756054692ef73",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow port 3000 todo-app",
            "from_port": 3000,
            "id": "sgr-0b2a756054692ef73",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dc63b9a30d8fe86e",
            "security_group_rule_id": "sgr-0b2a756054692ef73",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.todo-app-sg.aws_security_group.my-ssh-SG"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277707099798:security-group-rule/sgr-0449236c87dd9168d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow port 9100 nodeExporter",
            "from_port": 9100,
            "id": "sgr-0449236c87dd9168d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dc63b9a30d8fe86e",
            "security_group_rule_id": "sgr-0449236c87dd9168d",
            "tags": null,
            "tags_all": {},
            "to_port": 9100
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.todo-app-sg.aws_security_group.my-ssh-SG"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:277707099798:security-group-rule/sgr-0e44789569d3f903c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow port 8080 cAdvisor",
            "from_port": 8080,
            "id": "sgr-0e44789569d3f903c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dc63b9a30d8fe86e",
            "security_group_rule_id": "sgr-0e44789569d3f903c",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.todo-app-sg.aws_security_group.my-ssh-SG"
          ]
        }
      ]
    }
  ]
}